Added preliminary Scala demo benchmark support